<resources>
    <string name="app_name">Graphes</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Réinitialiser le graph</string>
    <string name="save">Sauvegarder</string>
    <string name="save2">Sauvegardes</string>
    <string name="send">Envoyer</string>
    <string name="node">Ajout Noeuds</string>
    <string name="arc">Ajout Arcs</string>
    <string name="modify">Modification</string>
</resources>
