<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.fblay.graphes.MainActivity">
    <item android:title="Generale"
        android:id="@+id/action_settings">
        <menu>
            <group
                android:id="@+id/noncheckable_group"
                android:checkableBehavior="none">
                <!-- Notice how these items inherit from the group. -->
                <item
                    android:id="@+id/noncheckable_item_1"
                    android:title="@string/reset" />
                <item
                    android:id="@+id/noncheckable_item_2"
                    android:title="@string/save" />
                <item
                    android:id="@+id/noncheckable_item_3"
                    android:title="@string/save2" />
                <item
                    android:id="@+id/noncheckable_item_4"
                    android:title="@string/send" />
            </group>
        </menu>
    </item>
    <item android:title="Modes">
        <group android:checkableBehavior="single">
            <!-- Notice how these items have each set. -->
            <item
                android:id="@+id/cNode"
                android:title="@string/node" />
            <item
                android:id="@+id/cArc"
                android:title="@string/arc" />
            <item
                android:id="@+id/cModify"
                android:title="@string/modify" />
        </group>
    </item>
</menu>
